tests/ui/rfcs/rfc-2632-const-trait-impl/call-generic-method-pass.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-method-pass.rs:18:32
   |
LL | const fn equals_self<T: ~const PartialEq>(t: &T) -> bool {
   |                                ^^^^^^^^^

error: aborting due to previous error

